# cepiokta

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  PROGRESS_TRACKER.md  PROMPT_GUIDE.md  README.md  SCAFFOLDING_COMPLETE.md  pyproject.toml  run.ps1
.github/workflows/: ci.yml
.kiro/specs/btc-bot/: design.md  requirements.md  tasks.md
docs/: 01-PROJECT_CONTEXT.md  02-ARCHITECTURE.md  03-TECH_STACK.md  04-API_INTEGRATION.md  05-STRATEGY_SPEC.md  06-RISK_MANAGEMENT.md  07-DATA_MODEL.md  08-MODULE_SPECS.md  09-TESTING_AND_BACKTESTING.md  10-ROADMAP.md  11-CONFIG_AND_SECRETS.md  12-TELEGRAM_INTEGRATION.md  13-STRATEGY_PLAYBOOK.md  14-MULTI_MARKET_SCALING.md
docs/adr/: 0001-scaffolding-complete.md
scripts/: backtest_report.py  read_chainlink_price.py  resolve_backfill.py
src/btcbot/: __init__.py
src/btcbot/adapters/: __init__.py  chainlink.py  clob_ws.py  clock.py  gamma.py
src/btcbot/app/: __init__.py  cli.py  demo.py
src/btcbot/backtest/: __init__.py  replay.py  report.py
src/btcbot/config/: __init__.py  settings.py
src/btcbot/data/: __init__.py  recorder.py  resolver.py  store.py
src/btcbot/domain/: __init__.py  fees.py  market.py  models.py  signal.py  strategy.py
src/btcbot/exec/: __init__.py  sizing.py
src/btcbot/risk/: __init__.py
tests/: __init__.py  conftest.py  test_placeholder.py
tests/adapters/: test_chainlink.py  test_clob_ws.py  test_clock.py  test_gamma.py
tests/app/: test_cli.py
tests/backtest/: test_replay.py  test_report.py
tests/config/: test_settings.py
tests/data/: test_recorder.py  test_resolver.py  test_store.py
tests/domain/: __init__.py  test_fees.py  test_market.py  test_signal.py  test_strategy.py
tests/exec/: __init__.py  test_sizing.py
tests/fixtures/: README.md  gamma_btc5m_markets.json  gamma_fee_schedule.json  gamma_resolved_markets.json  gamma_updown_live_fixture.json  ws_market_capture.json
