[project]
name = "btcbot"
version = "0.1.0"
description = "5min-btc-polymarket: bot trading Polymarket BTC Up/Down 5 menit"
authors = [
    {name = "btcbot team"}
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "websockets>=12.0",
    "web3>=6.15.0",
    "eth-account>=0.11.0",
    "pydantic-settings>=2.2.0",
    "aiosqlite>=0.19.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "respx>=0.21.0",
    "freezegun>=1.4.0",
    "types-aiofiles>=23.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/btcbot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "COM", # flake8-commas
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "G",   # flake8-logging-format
    "PIE", # flake8-pie
    "T20", # flake8-print
    "PT",  # flake8-pytest-style
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PL",  # pylint
    "RUF", # ruff-specific
]
ignore = [
    "COM812", # trailing-comma-missing (conflicts with black)
    "ISC001", # single-line-implicit-string-concatenation (conflicts with black)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN",     # no type hints required in tests
    "ARG",     # unused arguments ok in fixtures
    "PLR2004", # magic values ok in tests
]

[tool.ruff.lint.flake8-annotations]
# These rules are deprecated in newer ruff versions
allow-star-arg-any = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "web3.*",
    "eth_account.*",
    "prometheus_client.*",
    "websockets.*",
]
ignore_missing_imports = true
